@@ -103,7 +103,7 @@
 
 (easy-menu-define gentoo-newsitem-mode-menu gentoo-newsitem-mode-map
   "Menu for `gentoo-newsitem-mode'."
-  `("Newsitem"
+  '("Newsitem"
     ["Insert skeleton" gentoo-newsitem-insert-skeleton]))
 
 ;;;###autoload
