@@ -1,5 +1,10 @@
 2023-10-15  Ulrich Müller  <ulm@gentoo.org>
 
+	* ebuild-mode.el (ebuild-repo-mode-menu):
+	* gentoo-newsitem-mode.el (gentoo-newsitem-mode-menu):
+	* glep-mode.el (glep-mode-menu):
+	* devbook-mode.el (devbook-mode-menu): Backquote is not needed.
+
 	* ebuild-mode.el (ebuild-mode-time-string): Move setting of TZ
 	into the unwind-protect form.
 
